--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* Os estilos serão globais */
 
-body {
+/* body {
   background-color: #efefef;
   font-family: monospace;
   margin: 0;
@@ -30,4 +30,4 @@ img {
 
 h1 {
   text-align: center;
-}
+} */
